# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

licenses(["notice"])  # Apache 2.0


cc_library(
    name = "common",
    srcs = [
        "common.cc",
        "common.h",
    ],
    hdrs = ["common.h"],
    deps = [
        "@com_github_googleapis_google_cloud_cpp//:storage",
        "@boost//:algorithm",
        "@boost//:graph",
        "@boost//:date_time",
        "@boost//:regex",
        "@com_google_protobuf//:protobuf",
        "@com_github_opentelemetry_proto//:trace_service_proto_cc",
    ],
    visibility = ["//main:__pkg__"],
)

cc_library(
    name = "get_traces_by_structure",
    srcs = [
        "get_traces_by_structure.cc",
        "get_traces_by_structure.h",
    ],
    hdrs = ["get_traces_by_structure.h"],
    deps = [
        "@com_github_googleapis_google_cloud_cpp//:storage",
        "@boost//:algorithm",
        "@boost//:graph",
        "@boost//:date_time",
        "@com_google_protobuf//:protobuf",
        "@com_github_opentelemetry_proto//:trace_service_proto_cc",
        "//:common",
    ],
    visibility = ["//main:__pkg__"],
)

cc_binary(
    name = "graph_query",
    srcs = [
        "graph_query_main.cc",
    ],
    deps = [
        "//:bloom_filter",
        "//:graph_query_lib",
        "//:query_bloom_index",
        "//:folders_index_query_lib",
        "@com_github_googleapis_google_cloud_cpp//:storage",
        "@boost//:algorithm",
        "@boost//:graph",
        "@com_google_protobuf//:protobuf",
        "@com_github_opentelemetry_proto//:trace_service_proto_cc",
        "//:common",
    ],
)