# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

licenses(["notice"])  # Apache 2.0

cc_library(
    name = "common",
    srcs = [
        "common.cc",
        "common.h",
    ],
    hdrs = ["common.h"],
    deps = [
        "@boost//:algorithm",
        "@boost//:graph",
        "@boost//:date_time",
        "@boost//:regex",
    ],
    visibility = ["//main:__pkg__"],
)

cc_binary(
    name = "es_gq",
    srcs = [
        "query_es.cc",
        "query_es.h",
    ],
    deps = [
        "@com_github_nlohmann_json//:json",
        "@boost//:algorithm",
        "@boost//:graph",
        "//:common",
    ],
    linkopts = ["-lcurl"],
)